runtime borrow bug

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "pax-playground"
-version = "0.9.9"
+name = "pax-playground-new"
+version = "0.10.6"
 edition = "2021"
 
 [dependencies]
-pax-lang = { version = "0.9.9" }
-pax-std = { version = "0.9.9" }
-pax-compiler = { version = "0.9.9", optional = true}
+pax-lang = { version = "0.10.6" }
+pax-std = { version = "0.10.6" }
+pax-compiler = { version = "0.10.6", optional = true}
 serde_json = {version = "1.0.95", optional = true}
 
 [[bin]]
